--- a/spenser.css
+++ b/spenser.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
+
 body {
   margin: 0;
   padding: 0;
@@ -19,8 +20,44 @@ body {
 .underline {
   border-bottom: 1px solid #ffff;
 }
+.cancle {
+  font-size: 30px;
+  float: right;
+}
+
 menu {
-  display: none;
+  position: absolute;
+  width: 20.3rem;
+  top: 6.2rem;
+  left: -0.4rem;
+  background-color: #fff;
+  list-style: none;
+  padding: 20px 20px;
+  transform: translateX(-100vw);
+  transition: 0.3s ease;
+}
+.show_menu {
+  transform: translateX(0);
+}
+
+menu ul {
+  list-style: none;
+  clear: both;
+}
+menu ul li {
+  border-bottom: 1px solid #ececec;
+}
+
+menu ul li a {
+  font-size: 15px;
+  color: rgb(39, 39, 39);
+  display: block;
+  outline: none;
+  text-decoration: none;
+  padding: 20px;
+}
+menu ul li:nth-child(5) {
+  border-bottom: none;
 }
 .sub_header {
   padding: 1rem 1rem;
