--- a/spenser.css
+++ b/spenser.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
 body {
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   font-family: "Cabin", sans-serif;
@@ -186,7 +190,7 @@ menu ul li:nth-child(5) {
   justify-content: center;
 }
 .text_editor img {
-  width: 20rem;
+  width: 100%;
 }
 
 /* -------Footer section---------- */
